syntax = "proto3";

package user;

service User {
  rpc GetGoogleLoginUrl (GetGoogleLoginUrlRequest) returns (GetGoogleLoginUrlReply);
  rpc Login (LoginRequest) returns (LoginReply);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenReply);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersReply);
}

message UserProfile {
  string id = 1;
  string name = 2;
}

message GetGoogleLoginUrlRequest { }

message GetGoogleLoginUrlReply {
  string url = 1;
}

message LoginRequest {
  string code = 1;
}

message LoginReply {
  string id = 1;
  string email = 2;
  string name = 3;
  string token = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenReply {
  string id = 1;
  string email = 2;
  string name = 3;
}

message GetAllUsersRequest { }

message GetAllUsersReply {
  repeated UserProfile users = 1;
}